2008-01-06  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/Game.cs (Game.PlayingBroodWar): add the
	patchrt.mpq to the playingMpq list.

2006-06-30  Chris Toshok  <toshok@hungry.com>

	* nant.build: add a dist and release target.  the dist target just
	zips things up from the source tree, the release target creates a
	new output directory and calls the build target on it.  Lastly,
	add an if clause to the Consts.cs copy task so that it should be
	rebuilt if nant.build is newer, but it doesn't seem to work.  bug
	in nant?  Another bug (this time in ICSharpLib): the file
	permissions are stripped from files we add to a .zip, so the
	dist'ed configure file doesn't have execute permissions.

2006-06-30  Chris Toshok  <toshok@hungry.com>

	* nant.build: change back to a fileset for the Tao.Sdl.dll.config
	and pass flatten=true to keep the source directory from being
	created under the dest directory.  Also, change the
	scsharp.exe.config rule to copy the file if either 1)
	overwriteConfig is true, or 2) the file doesn't exist in the bin/
	directory already.

2006-06-30  Chris Toshok  <toshok@hungry.com>

	* src/scsharp.exe.sources: include ../build/Consts.cs

	* SCSharp/SCSharp.dll.sources: include ../build/Consts.cs

	* SCSharp/SCSharp.Smk.dll.sources: include ../build/Consts.cs

	* SCSharp/SCSharp.UI.dll.sources: include ../build/Consts.cs

	* SCSharp/SCSharp.UI/MainMenu.cs: use Consts.Version instead of
	hardcoding the version.

	* src/AssemblyInfo.cs: use Consts.Version

	* SCSharp/SCSharp.Mpq/AssemblyInfo.cs: use Consts.Version

	* SCSharp/SCSharp.Mpq.Smk/AssemblyInfo.cs: use Consts.Version

	* SCSharp/SCSharp.UI/AssemblyInfo.cs: use Consts.Version

	* build/Consts.cs.in: source for a generated per-assembly file.
	
	* nant.build: generate build/Consts.cs from build/Consts.cs.in.

	* configure.ac: same.
	
	* SCSharp/Makefile.am (SCSHARPDLL_REFS): drop the
	ICSharpCode.SharpZipLib dep.

2006-06-30  Chris Toshok  <toshok@hungry.com>
